ai is the future

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Squint Rulez Dood</title>
   </head>
   <body class="h-full">
-    <div class="min-h-full flex flex-col justify-center items-center">
-      <h1 class="text-4xl font-bold mb-8">Squint + Vite + Tailwind</h1>
-      <p class="text-4xl animate-bounce">
-        ❤️
-      </p>
-    </div>
+    <h1 class="text-2xl text-center absolute left-1/2 -translate-x-1/2 top-20 w-full font-mono">
+      Jump For The Future!
+    </h1>
+    <audio class="absolute top-30 left-1/2 -translate-x-1/2" id="audio" controls loop>
+      <source src="/tunes.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
     <script type="module" src="dist/app.js"></script>
+    <p class="absolute bottom-10 left-10">
+      Music from #Uppbeat (free for Creators!):
+      https://uppbeat.io/t/walz/misguided
+    </p>
   </body>
 </html>
