fix: use relative paths for audio and sprite

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Jump For The Future!
     </h1>
     <audio class="absolute top-30 left-1/2 -translate-x-1/2" id="audio" controls loop>
-      <source src="/tunes.mp3" type="audio/mp3">
+      <source src="tunes.mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
     <script type="module" src="dist/app.js"></script>
